--- a/third-party.html
+++ b/third-party.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Top-tier Realty - Real Estate Company</title>
+
+    <!-- Add this in your <head> if not already present -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <title>Top-Tier Realty - Real Estate Company</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,35 +33,61 @@ https://templatemo.com/tm-591-villa-agency
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
+<!-- ***** Image Preloader Start ***** -->
+<div id="js-preloader" class="image-preloader">
+  <div class="preloader-content">
+    <img src="assets/images/toptierpreloder.png" alt="Loading..." class="preloader-logo">
   </div>
-  <!-- ***** Preloader End ***** -->
+</div>
 
+<script>
+  window.addEventListener("load", function () {
+    const preloader = document.getElementById("js-preloader");
+    preloader.classList.add("fade-out");
+    setTimeout(() => { preloader.style.display = "none"; }, 600);
+  });
+</script>
+
+<!-- ***** Image Preloader End ***** -->
   
-<div class="sub-header" style="background-color: #001a2b; width: 100%; padding: 10px 0;">
+<div class="sub-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-8">
-        <ul class="info" style="margin: 0; padding: 0; list-style: none;">
-          <li><i class="fa fa-envelope"></i> officialtoptierrealty@gmail.com</li>
-          <li><i class="fa fa-map"></i> Abiding Grace Plaza, Apo; Gudu. Abuja</li>
+        <ul class="info">
+          <li>
+            <i class="fa fa-envelope"></i>
+            officialtoptierrealty@gmail.com
+          </li>
+          <li>
+            <i class="fa fa-map-marker-alt"></i>
+            Abiding Grace Plaza, Apo; Gudu. Abuja
+          </li>
         </ul>
       </div>
+
       <div class="col-lg-4 col-md-4">
-        <ul class="social-links" style="margin: 0; padding: 0; list-style: none; display: flex; gap: 10px; justify-content: flex-end;">
-          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-          <li><a href="https://x.com/minthu" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        <ul class="social-links">
+        <li>
+    <a href="https://www.facebook.com/profile.php?id=61576613353029&mibextid=ZbWKwL" target="_blank" title="Facebook">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://x.com/top_tierrealty?t=NcOIc6vsba6OuGsv1dlH_w&s=09" target="_blank" title="X (Twitter)">
+      <i class="fab fa-x-twitter"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.tiktok.com/@officialtoptierrealty?_t=ZS-90Otipaq9k8&_r=1" target="_blank" title="TikTok">
+      <i class="fab fa-tiktok"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.instagram.com/officialtoptierrealty?igsh=c2o1aTJvZGpiMDE4" target="_blank" title="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </li>
         </ul>
       </div>
     </div>
@@ -65,30 +95,34 @@ https://templatemo.com/tm-591-villa-agency
 </div>
 
 
+
+
   <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky">
+ <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="assets/images/toptierlogo.png" alt="Toptier Logo" style="height: 140px; width: 140px; margin-top: -30px;">
+                        <img src="assets/images/ttrlogo.png" alt="Toptier Logo" style="height: 140px; width: 140px; margin-top: -30px;">
                     </a>
+                 
+
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="properties.html" class="active">Properties</a></li>
-                        <li><a href="property-details.html">Our Third Party Properties</a></li>
+                        <li><a href="third-party.html">Our Third Party Properties</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li>
-                            <a href="#">
-                        <i class="fa fa-car" style="color: gold;"></i> Book a free site visit
-                            </a>
+                           <li>
+                            <a href="https://wa.me/2349160008309?text=Hello%20Top-Tier%20Team" target="_blank">
+  <i class="fa fa-car"  style="color: #C8AA62;"></i> Book a free site visit
+</a>
+
                         </li>
-
-
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -99,7 +133,7 @@ https://templatemo.com/tm-591-villa-agency
         </div>
     </div>
 </header>
-
+  <!-- ***** Header Area End ***** -->
   <!-- ***** Header Area End ***** -->
 
  <!-- Page Heading -->
@@ -108,8 +142,8 @@ https://templatemo.com/tm-591-villa-agency
     <div class="row">
       <div class="col-lg-12 text-center">
         <br>
-        <span class="breadcrumb"><a href="#">Home</a> Our Third Party Properties</span>
-        <p style="color: #ffffff;">In Partenership with out trusted developers</p>
+        <span class="breadcrumb"><a href="#">Home</a> Our Site / Properties</span>
+        <span><a href="#">Developed</a> by our Trusted Partners</span>
       </div>
     </div>
   </div>
@@ -120,7 +154,7 @@ https://templatemo.com/tm-591-villa-agency
 <style>
   /* Page Heading Section */
 .page-heading {
-  background: linear-gradient(135deg, #0a1a33 0%, #b8860b 100%); /* Navy blue + gold blend */
+  background: linear-gradient(135deg, #0a1a33 0%, #C8AA62 100%); /* Navy blue + gold blend */
   color: #fff;
   padding: 80px 0 60px; /* Reduced height */
   position: relative;
@@ -137,7 +171,7 @@ https://templatemo.com/tm-591-villa-agency
 }
 
 .page-heading .breadcrumb {
-  color: #ffd700; /* gold breadcrumb text */
+  color: #C8AA62; /* gold breadcrumb text */
   font-size: 16px;
   font-weight: 500;
 }
@@ -149,9 +183,46 @@ https://templatemo.com/tm-591-villa-agency
 }
 
 .page-heading .breadcrumb a:hover {
-  color: #ffd700;
+  color: #C8AA62;
+}
+.property-overlay {
+  text-align: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 15px;
 }
 
+.property-location {
+  margin: 8px 0;
+  font-size: 0.95rem;
+  color: #f1f1f1;
+}
+
+.property-location i {
+  color: #C8AA62; /* red location icon */
+  margin-right: 6px;
+}
+
+.see-more {
+  display: inline-block;
+  background: #C8AA62;
+  color: #fff;
+  padding: 6px 14px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.see-more:hover {
+  background: #000b3f;
+}
+
+.property-box h4 {
+  
+  font-weight: 700;
+  color: #fff;
+  margin-top: 10px;
+}
 
 
 
@@ -170,15 +241,20 @@ https://templatemo.com/tm-591-villa-agency
 
 </style>
 <!-- PROPERTIES SECTION -->
+
+
 <section class="properties-section">
   <div class="container">
     <div class="row g-4 justify-content-center">
       <!-- Property Item -->
       <div class="col-lg-4 col-md-6">
         <div class="property-box">
-          <img src="assets/images/property-01.jpg" alt="Luxury Villa">
+          <img src="assets/images/high1.jpg" alt="Luxury Villa">
           <div class="property-overlay">
-            <h4>18 Old Street Miami</h4>
+            <h4>Green Haven Estate</h4>
+            <p class="property-location">
+              <i class="fa-solid fa-location-dot"></i> Karsana Abuja
+            </p>
             <a href="property-details.html" class="see-more">See More</a>
           </div>
         </div>
@@ -186,40 +262,105 @@ https://templatemo.com/tm-591-villa-agency
 
       <div class="col-lg-4 col-md-6">
         <div class="property-box">
-          <img src="assets/images/property-02.jpg" alt="Luxury Villa">
+          <img src="assets/images/high2.jpg" alt="Luxury Villa">
           <div class="property-overlay">
-            <h4>54 New Street Florida</h4>
+            <h4>Medal Residence</h4>
+            <p class="property-location">
+              <i class="fa-solid fa-location-dot"></i> Idu, Abuja
+            </p>
             <a href="property-details.html" class="see-more">See More</a>
           </div>
         </div>
       </div>
-
-
 
       <div class="col-lg-4 col-md-6">
         <div class="property-box">
-          <img src="assets/images/property-03.jpg" alt="Luxury Villa">
+          <img src="assets/images/high3.jpg" alt="Luxury Villa">
           <div class="property-overlay">
-            <h4>26 Mid Street Portland</h4>
+            <h4>Starlight Estate</h4>
+            <p class="property-location">
+              <i class="fa-solid fa-location-dot"></i> Kyami, Abuja
+            </p>
             <a href="property-details.html" class="see-more">See More</a>
           </div>
         </div>
       </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="property-box">
+          <img src="assets/images/high9.jpg" alt="Luxury Villa">
+          <div class="property-overlay">
+            <h4>Trojan Villa</h4>
+            <p class="property-location">
+              <i class="fa-solid fa-location-dot"></i> Katampe Extensio, ABuja
+            </p>
+            <a href="property-details.html" class="see-more">See More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
       <!-- Add more property boxes here as needed -->
     </div>
   </div>
 </section>
 
-<footer>
-  <div class="container">
-    <div class="col-lg-12 text-center">
-      <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved.
-        Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a>
-      </p>
+<!-- Footer -->
+<!-- Footer -->
+  <footer style="background-color: #001f3f; color: #ffffff; font-size: 14px; padding: 40px 20px 20px; text-align: center;">
+    <div style="max-width: 1100px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 40px; text-align: left;">
+
+      <!-- Logo and Description -->
+      <div style="flex: 1; min-width: 300px;">
+        <h3 style="font-size: 18px; margin-bottom: 10px; color: #c8aa62;">Top-tier Realty</h3>
+        <p style="margin: 0; color: #d0d8e0; line-height: 1.6;">
+          At Top-Tier realty, we make property investment and ownership a smooth and rewarding experience for our clients.
+        </p>
+      </div>
+
+      <!-- Contact Details -->
+      <div style="flex: 1; min-width: 300px;">
+        <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Address</h4>
+        <p style="margin: 0 0 8px; color: #d0d8e0;">Abiding Grace Plaza, Apo, Gudu; Abuja.</p>
+
+        <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Email</h4>
+        <p style="margin: 0; color: #d0d8e0;">officialtoptierrealty@gmail.com</p>
+
+        <h4 style="font-size: 15px; margin-bottom: 4px; color: #c8aa62;">Phone</h4>
+        <p style="margin: 0; color: #d0d8e0;">+234-916-000-8309</p>
+        <p style="margin: 0; color: #d0d8e0;">+234-907-726-6555</p>
+        <p style="margin: 0; color: #d0d8e0;">+234-814-597-2225</p>
+        <p style="margin: 0; color: #d0d8e0;">+234-704-358-1877</p>
+      </div>
+
+      <!-- Social Links -->
+      <div style="flex: 1; min-width: 250px;">
+        <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Follow Us</h4>
+        <div style="display: flex; gap: 15px; margin-top: 5px;">
+          <a href="https://www.facebook.com/profile.php?id=61576613353029&mibextid=ZbWKwL" target="_blank" title="Facebook"style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-facebook-f"></i></a>
+          <a  href="https://www.instagram.com/officialtoptierrealty?igsh=c2o1aTJvZGpiMDE4" target="_blank" title="Instagram" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.tiktok.com/@officialtoptierrealty?_t=ZS-90Otipaq9k8&_r=1" target="_blank" title="TikTok"style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-tiktok"></i></a>
+<a href="https://x.com/top_tierrealty?t=NcOIc6vsba6OuGsv1dlH_w&s=09"
+   target="_blank"
+   style="color: #ffffff; font-size: 18px;">
+   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" width="18" height="18" fill="currentColor">
+     <path d="M714.2 519.9 1160.9 0h-105.2L667.3 442.2 398.6 0H0l468.1 728.2L0 1226.9h105.2l409.1-466.4 287.8 466.4h398.6L714.2 519.9zM575.8 689.5l-47.4-74.2L143.3 79.8h181.2l305.4 478.7 47.4 74.2 403.9 634.4H899.9L575.8 689.5z"/>
+   </svg>
+</a>
+          <!-- <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-youtube"></i></a> -->
+        </div>
+      </div>
     </div>
-  </div>
-</footer>
+
+    <hr style="border: none; border-top: 1px solid rgba(255,255,255,0.1); margin: 25px auto 10px; width: 90%;">
+    <div style="color: #d0d8e0; font-size: 13px; line-height: 1.4;">
+      <p style="margin: 0;">&copy; 2025 Top-Tier Realty. All rights reserved.</p>
+      <p style="margin: 2px 0 0;">Designed by <strong>TTR Media</strong></p>
+    </div>
+  </footer>
 
 
   <!-- Scripts -->
