--- a/index.html
+++ b/index.html
@@ -140,6 +140,48 @@ h2 {
   color: #fff;
 }
 
+.flow-btn {
+  display: inline-block;
+  position: relative;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: 600;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 8px;
+  overflow: hidden;
+  background: linear-gradient(270deg, #10344d #0088cc, #0055a4);
+  background-size: 400% 400%;
+  animation: waterFlow 6s ease infinite;
+  border: none;
+  box-shadow: 0 0 12px rgba(239, 244, 103, 0.5);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.flow-btn i {
+  margin-right: 8px;
+  color: #C8AA62;
+}
+
+.flow-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 18px rgba(0, 36, 54, 0.7);
+}
+
+/* Water flowing effect */
+@keyframes waterFlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
   </style>
 
 <body>
@@ -313,6 +355,11 @@ h2 {
         ">
       </div>
     </div>
+
+   <a href="https://wa.me/2349160008309?text=Hello%20Top-Tier%20Team" target="_blank" class="flow-btn">
+  <i class="fa fa-car"></i> Book a free site visit
+</a>
+
 
     <!-- Text Side -->
     <div class="story-text-side" style="
