--- a/properties.html
+++ b/properties.html
@@ -247,7 +247,7 @@ https://templatemo.com/tm-591-villa-agency
   <div class="container">
     <div class="row g-4 justify-content-center">
       <!-- Property Item -->
-      <div class="col-lg-4 col-md-6">
+      <!-- <div class="col-lg-4 col-md-6">
         <div class="property-box">
           <img src="assets/images/high8.jpg" alt="Luxury Villa">
           <div class="property-overlay">
@@ -258,7 +258,7 @@ https://templatemo.com/tm-591-villa-agency
             <a href="property-details.html" class="see-more">See More</a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="col-lg-4 col-md-6">
         <div class="property-box">
@@ -275,13 +275,13 @@ https://templatemo.com/tm-591-villa-agency
 
       <div class="col-lg-4 col-md-6">
         <div class="property-box">
-          <img src="assets/images/high7.jpg" alt="Luxury Villa">
+          <img src="assets/images/high7.jpg" alt="HIGHLAND CITY">
           <div class="property-overlay">
             <h4>Highland City Estate</h4>
             <p class="property-location">
               <i class="fa-solid fa-location-dot"></i> Kabusa, Abuja
             </p>
-            <a href="property-details.html" class="see-more">See More</a>
+            <a href="highlandcity.html" class="see-more">See More</a>
           </div>
         </div>
       </div>
