--- a/highlandcity.html
+++ b/highlandcity.html
@@ -365,6 +365,28 @@
     <h2>HIGHLAND CITY ESTATE</h2>
     <p>SHERETTI KABUSA, ABUJA</p>
   </section>
+  <section class="nearby-section" style="padding: 50px 15px; background-color: #f9f9f9;">
+  <div style="max-width: 850px; margin: 0 auto; text-align: center;">
+    <h2 style="font-size: 26px; font-weight: 700; color: #0a1a3a; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 0.8px;">
+      Nearby Places
+    </h2>
+
+    <p style="font-size: 15px; color: #444; margin-bottom: 25px; line-height: 1.6;">
+      Plot 2, after Kabusa Gardens, Cadastral Zone D14, Sheretti District, F.C.T.
+      <br>
+      <strong style="color: #0a1a3a;">(Nearby Landmark)</strong>
+    </p>
+
+    <div style="text-align: left; display: inline-block; border: 2px solid #0a1a3a; padding: 20px 25px; border-radius: 10px; background-color: #ffffff; box-shadow: 0 3px 8px rgba(0,0,0,0.08);">
+      <ul style="list-style: none; padding: 0; margin: 0; font-size: 14.5px; color: #444; line-height: 1.9;">
+        <li><i class="fa fa-map-marker-alt" style="color:#0a1a3a; margin-right:8px;"></i><strong>African Medical Centre of Excellence, Apo</strong> — 6 mins drive</li>
+        <li><i class="fa fa-map-marker-alt" style="color:#0a1a3a; margin-right:8px;"></i><strong>Kabusa Gardens</strong> — 6 mins drive</li>
+        <li><i class="fa fa-map-marker-alt" style="color:#0a1a3a; margin-right:8px;"></i><strong>Apo Mechanic Village</strong> — 8 mins drive</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 
   <!-- PROPERTIES -->
   <section class="prototype-section">
