--- a/highlandcity.html
+++ b/highlandcity.html
@@ -488,8 +488,8 @@
             <div class="property-info">
               <h6>750 SQM</h6>
               <h4>6 Unit, 3 bedroom Apartment</h4>
-              <p>Lunara 150SQM is Ideal for a 3-bedroom terrace duplex, Lunara (150sqm land, Current Market Value: ₦5,850,000) 
-                is designed to maximize space efficiency with compromising comfort. </p>
+              <p>Suitable for a 6-unit, 3-bedroom apartment complex, catering to extended families or investment 
+                purposes. Current Market Value: ₦29,250,000. </p>
 
 
 <!-- Secure Your Place  and floor plan Button -->
