--- a/hutupologolf.html
+++ b/hutupologolf.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Top-Tier Realty - Abiding Grace Estate</title>
+  <title>Top-Tier Realty - Highland City Estate Kabusa</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -362,9 +362,31 @@
 
   <!-- HERO SECTION -->
   <section class="estate-header">
-    <h2>hutu Polo Golf</h2>
-    <p>before cetenary city, </p>
+    <h2>Hutu Resort, Abuja</h2>
+    <p>Plot 1659, before Centenary City, Cadastral Zone E09, Lugbe South district, Airport Road Abuja, F.C.T.</p>
   </section>
+  <section class="nearby-section" style="padding: 50px 15px; background-color: #f9f9f9;">
+  <div style="max-width: 850px; margin: 0 auto; text-align: center;">
+    <h2 style="font-size: 26px; font-weight: 700; color: #0a1a3a; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 0.8px;">
+      Nearby Places
+    </h2>
+
+    <p style="font-size: 15px; color: #444; margin-bottom: 25px; line-height: 1.6;">
+     Plot 1659, before Centenary City, Cadastral Zone E09, Lugbe South district, Abuja, F.C.T.
+      <br>
+      <strong style="color: #0a1a3a;">(Nearby Landmark)</strong>
+    </p>
+
+    <div style="text-align: left; display: inline-block; border: 2px solid #0a1a3a; padding: 20px 25px; border-radius: 10px; background-color: #ffffff; box-shadow: 0 3px 8px rgba(0,0,0,0.08);">
+      <ul style="list-style: none; padding: 0; margin: 0; font-size: 14.5px; color: #444; line-height: 1.9;">
+        <li><i class="fa fa-map-marker-alt" style="color:#0a1a3a; margin-right:8px;"></i><strong>Centenary City, Airport Road</strong> — 8 mins drive</li>
+        <li><i class="fa fa-map-marker-alt" style="color:#0a1a3a; margin-right:8px;"></i><strong>The Glory Dome</strong> — 15 mins drive</li>
+        <li><i class="fa fa-map-marker-alt" style="color:#0a1a3a; margin-right:8px;"></i><strong>Nnamdi Azikiwe International Airport</strong> — 20 mins drive</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 
   <!-- PROPERTIES -->
   <section class="prototype-section">
@@ -372,50 +394,195 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="property-card">
-            <img src="assets/images/deal-01.jpg" alt="">
+            <img src="assets/images/hutu150sqm.jpg" alt="">
             <div class="property-info">
               <h6>150 SQM</h6>
               <h4>3 bedroom terrace</h4>
-              <p>Modern comfort with smart design and serene ambience.</p>
-              <a href="#" class="btn-secure">Secure Your Place</a>
+              <p>Ideal for a 3-bedroom terrace duplex, Azure (150sqm, Current Market Value: ₦9,331,000)
+                 is designed to maximize space efficiency with compromising comfort. </p>
+
+
+<!-- Secure Your Place  and floor plan Button -->
+<a href="https://wa.me/2349160008309?text=Hi%2C%20I%20want%20more%20details%20on%20the%20150SQM%20in%20Hutu%20City%20polo&Golf%Estate" 
+   class="btn-secure" 
+   target="_blank">
+   Secure Your Place
+</a>
+<br><hr>
+<a href="assets/docs/hutu150floorplan.pdf" class="btn-secure" style="background: #eee;" target="_blank">View floor plan</a>
+<!-- Secure Your Place Button -->
+
+
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="property-card">
-            <img src="assets/images/deal-02.jpg" alt="">
+            <img src="assets/images/hutu250sqm.jpg" alt="">
             <div class="property-info">
-              <h4>Luxury Villa</h4>
-              <p>Experience private gardens, wide spaces, and elegant finishing.</p>
-              <a href="#" class="btn-secure">Secure Your Place</a>
+              <h6>250 SQM</h6>
+              <h4>4 bedroom semi-detached duplex</h4>         
+            <p>Perfect for a 4-bedroom semi-detached duplex, offering a balance 
+              of space and luxury. Current Market Value: ₦15,552,000.</p>
+
+<!-- Secure Your Place  and floor plan Button -->
+<a href="https://wa.me/2349160008309?text=Hi%2C%20I%20want%20more%20details%20on%20the%20250SQM%20in%20Hutu%20polo%golf%20Estate" 
+   class="btn-secure" 
+   target="_blank">
+   Secure Your Place
+</a>
+<br><hr>
+<a href="assets/docs/hutu250floorplan.pdf" class="btn-secure" style="background: #eee;" target="_blank">View floor plan</a>
+<!-- Secure Your Place Button -->
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-md-4">
+          <div class="property-card">
+            <img src="assets/images/hutu350sqm.jpg" alt="">
+            <div class="property-info">
+              <h6>350 SQM</h6>
+              <h4>4 Bedroom fully detached duplex</h4>
+              <p>For those desiring more privacy, Tranquil (350sqm, Current Market Value: ₦21,736,000) provides ample space to 
+                build a 4-bedroom fully detached duplex.</p>
+<!-- Secure Your Place  and floor plan Button -->
+<a href="https://wa.me/2349160008309?text=Hi%2C%20I%20want%20more%20details%20on%20the%20350SQM%20in%20Hutu%20Polo&Golf%20Estate" 
+   class="btn-secure" 
+   target="_blank">
+   Secure Your Place
+</a>
+<br><hr>
+<a href="assets/docs/hutu350floorplan.pdf" class="btn-secure" style="background: #eee;" target="_blank">View floor plan</a>
+<!-- Secure Your Place Button -->            </div>
+          </div>
+        </div>
+
+ <div class="col-md-4">
+          <div class="property-card">
+            <img src="assets/images/hutu500sqm.jpg" alt="">
+            <div class="property-info">
+              <h6>500 SQM</h6>
+              <h4>4 bedroom fully-detached</h4>
+              <p>Elysian supports the construction of a grand 5-bedroom fully-detached duplex, ideal for larger 
+                families. Current Market Value: ₦31,104,000. </p>
+
+
+<!-- Secure Your Place  and floor plan Button -->
+<a href="https://wa.me/2349160008309?text=Hi%2C%20I%20want%20more%20details%20on%20the%20500SQM%20in%20Hutu%20Polo&Golf%20Estate" 
+   class="btn-secure" 
+   target="_blank">
+   Secure Your Place
+</a>
+<br><hr>
+<a href="assets/docs/hutu500floorplan.pdf" class="btn-secure" style="background: #eee;" target="_blank">View floor plan</a>
+<!-- Secure Your Place Button -->
+
+
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="property-card">
-            <img src="assets/images/deal-03.jpg" alt="">
+            <img src="assets/images/hutu1000sqm.jpg" alt="">
             <div class="property-info">
-              <h4>Executive Penthouse</h4>
-              <p>Panoramic views, exclusive comfort, and top-tier design.</p>
-              <a href="#" class="btn-secure">Secure Your Place</a>
+              <h6>1000 SQM</h6>
+              <h4>6 Unit, 3 bedroom Apartment</h4>
+              <p>Suitable for a 6-unit, 3-bedroom apartment complex, catering to extended 
+                families or investment purposes. Current Market Value: ₦61,208,000. </p>
+
+
+<!-- Secure Your Place  and floor plan Button -->
+<a href="https://wa.me/2349160008309?text=Hi%2C%20I%20want%20more%20details%20on%20the%20750SQM%20in%20Highland%20City%20Kabusa" 
+   class="btn-secure" 
+   target="_blank">
+   Secure Your Place
+</a>
+<br><hr>
+<a href="assets/docs/hutu1000floorplan.pdf" class="btn-secure" style="background: #eee;" target="_blank">View floor plan</a>
+<!-- Secure Your Place Button -->
+
+
             </div>
           </div>
         </div>
+       
+
       </div>
     </div>
   </section>
+
+  <section class="our-layout-section" style="text-align: center; padding: 60px 20px; background-color: #f9f9f9;">
+  <h2 style="font-size: 32px; font-weight: 700; color: #0a1a3a; margin-bottom: 25px; text-transform: uppercase; letter-spacing: 1px;">
+    Our Layout
+  </h2>
+
+  <img src="assets/images/" alt="Our Layout" 
+       style="width: 90%; max-width: 900px; border: 8px solid #0a1a3a; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+</section>
+
 
   <!-- AMENITIES -->
   <section class="amenities-section">
     <div class="container">
       <h3>Estate Amenities</h3>
       <div class="row g-4 text-center">
-        <div class="col-md-2 col-6"><div class="amenity-box"><i class="fa-solid fa-bolt"></i><h5>Electricity</h5></div></div>
-        <div class="col-md-2 col-6"><div class="amenity-box"><i class="fa-solid fa-water"></i><h5>Water Supply</h5></div></div>
-        <div class="col-md-2 col-6"><div class="amenity-box"><i class="fa-solid fa-shield-halved"></i><h5>Security</h5></div></div>
-        <div class="col-md-2 col-6"><div class="amenity-box"><i class="fa-solid fa-tree"></i><h5>Green Area</h5></div></div>
-        <div class="col-md-2 col-6"><div class="amenity-box"><i class="fa-solid fa-car"></i><h5>Parking</h5></div></div>
-        <div class="col-md-2 col-6"><div class="amenity-box"><i class="fa-solid fa-wifi"></i><h5>Internet</h5></div></div>
+       <div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-golf-ball-tee"></i>
+    <h5>18-hole Golf Course</h5>
+  </div>
+</div>
+
+<div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-horse-head"></i>
+    <h5>Polo Grounds</h5>
+  </div>
+</div>
+
+<div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-store"></i>
+    <h5>Commercial Spaces</h5>
+  </div>
+</div>
+
+<div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-water"></i>
+    <h5>Artificial Lakes</h5>
+  </div>
+</div>
+
+<div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-person-running"></i>
+    <h5>Amusement Park</h5>
+  </div>
+</div>
+
+<div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-horse"></i>
+    <h5>Horse Ranch</h5>
+  </div>
+</div>
+
+<div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-building"></i>
+    <h5>Luxury Apartments</h5>
+  </div>
+</div>
+
+<div class="col-md-2 col-6">
+  <div class="amenity-box">
+    <i class="fa-solid fa-school"></i>
+    <h5>Institutional Buildings</h5>
+  </div>
+</div>
+
       </div>
     </div>
   </section>
