--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-509SPFF5E1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-509SPFF5E1');
+</script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -722,22 +731,27 @@ We develop some properties ourselves, we also partner with other trusted develop
                         <li>Payment Plan <span style="color: #f8f9fc;">Flexible (3-6 months)</span></li>
                       </ul>
                       <div class="info-buttons">
-                        <a href="#" class="btn-info gold"><i class="fa fa-download"></i> Download Layout</a>
+                        <!-- <a href="#" class="btn-info gold"><i class="fa fa-download"></i> Download Layout</a> -->
                         <!-- <a href="#" class="btn-info navy"><i class="fa fa-search"></i> Check Availability</a> -->
-                        <a href="#" class="btn-info gold"><i class="fa fa-lock"></i> Secure Your Spot</a>
+<a href="https://wa.me/2349160008309?text=Hi%20Top-Tier%20team,%20I%20want%20to%20schedule%20a%20visit%20to%20Greenhaven%20Estate" 
+   class="btn-info gold" 
+   target="_blank">
+  <i class="fa fa-lock"></i> Book a Visit
+</a>
                       </div>
                     </div>
                   </div>
 
                   <div class="col-lg-6">
-                    <img src="assets/images/high7.jpg" alt="Apartment" class="img-fluid rounded shadow-sm">
+                    <img src="assets/images/greenhaven500.jpg" alt="Apartment" class="img-fluid rounded shadow-sm">
                   </div>
 
                   <div class="col-lg-3">
-                    <h4 style="color: #001f3f;">Extra Info About Property</h4>
-                    <p style="color: #000;">Experience luxury living at its finest in our modern apartments with serene surroundings and top-tier amenities. Perfect for investors and families seeking elegance and comfort in one place.</p>
+                    <h4 style="color: #001f3f;">Plot 33, opposite Nigerian Army Estate, Cadastral Zone D06, Karsana West, Abuja, F.C.T</h4>
+                    <p style="color: #000;"> In collaboration with Edin&People and Firstfruit. Spanning 15 hectares and featuring 418 meticulously planned housing units, this FCDA-approved estate is located along the new ongoing Karsana road, directly opposite Nigerian Army Estate and before Renewed Hope City. This corridor connects Federal Housing 
+                      Bridge (Gwarinpa - Kubwa Expressway) to Gwarinpa Extension.</p>
                     <div class="icon-button">
-                      <a href="property-details.html" class="visit-btn"><i class="fa fa-car"></i> Schedule a Visit</a>
+                      <a href="greenhaven.html" class="visit-btn"><i class="fa-solid fa-building"></i>View prototypes</a>
                     </div>
                   </div>
                 </div>
@@ -749,28 +763,36 @@ We develop some properties ourselves, we also partner with other trusted develop
                   <div class="col-lg-3">
                     
                     <div class="info-table">
-                      <h2>Highland Enclave Kabusa</h2>
+                      <h2>Highland City, Sheretti Kabusa</h2>
                       <hr>
                       <ul>
-                        <li>Estate Size <span style="color: #f8f9fc;">250 m²</span></li>
-                        <li>Document Type <span style="color: #f8f9fc;">Governor’s Consent</span></li>
-                        <li>Payment Plan <span style="color: #f8f9fc;">Outright or Installment</span></li>
+                        <li>Estate Size <span style="color: #f8f9fc;">92 Hectares</span></li>
+                        <li>Document Type <span style="color: #f8f9fc;">R of 0</span></li>
+                        <li>Payment Plan <span style="color: #f8f9fc;">3-6 Months</span></li>
                       </ul>
                       <div class="info-buttons">
-                        <a href="#" class="btn-info gold"><i class="fa fa-download"></i> Download Layout</a>
-                        <a href="#" class="btn-info navy"><i class="fa fa-search"></i> Check Availability</a>
-                        <a href="#" class="btn-info gold"><i class="fa fa-lock"></i> Secure Your Spot</a>
+                       <a href="https://wa.me/2349160008309?text=Hi%20Top-Tier%20team,%20I%20want%20to%20schedule%20a%20visit%20to%20HighlandCity%20Estate" 
+   class="btn-info gold" 
+   target="_blank">
+  <i class="fa fa-lock"></i> Book a Visit
+</a>
                       </div>
                     </div>
                   </div>
 
                   <div class="col-lg-6">
-                    <img src="assets/images/high10.jpg" alt="Villa" class="img-fluid rounded shadow-sm">
+                    <img src="assets/images/fullydetachedbqhighland.jpg" alt="Villa" class="img-fluid rounded shadow-sm">
                   </div>
 
                   <div class="col-lg-3">
-                    <h4 style="color: #001f3f;">Detail Info About Villa</h4>
-                    <p style="color: #000;">Our villas combine modern architecture with classic charm, offering spacious rooms, lush greenery, and premium finishes to create the perfect dream home experience.</p>
+                    <h4 style="color: #001f3f;">Plot 2, after Kabusa Gardens, Cadastral Zone D14, Sheretti District, F.C.T.</h4>
+                    <p style="color: #000;">Our Top-Tier Highland City Sheretti, in collaboration with FirstFruit Housing 
+                      and Edin & People. 
+                      Located in the fast-growing Sheretti district, Highland City Sheretti 
+                      features 1,000 well-planned housing units. This FCDA-approved estate sits off the new Kabusa-Ketti road, connecting Lokogoma to Lugbe, Pyakasa, and Kuje.
+
+
+                      Access is available via: Lokogoma, through SunnyVale Junction, past Kabusa Gardens Estate, and Apo, shortly after the African Medical Centre of Excellence (developed in collaboration with King's College London), located just beyond Apo Mechanic Village.</p>
                     <div class="icon-button">
                       <a href="property-details.html" class="visit-btn"><i class="fa fa-car"></i> Schedule a Visit</a>
                     </div>
@@ -786,25 +808,28 @@ We develop some properties ourselves, we also partner with other trusted develop
                       <h2>Hutu Polo Golf Resort, Airport Road</h2>
                       <hr>
                       <ul>
-                        <li>Estate Size <span style="color: #f8f9fc;">320 m²</span></li>
+                        <li>Estate Size <span style="color: #f8f9fc;">200 Hectares</span></li>
                         <li>Document Type <span style="color: #f8f9fc;">R of O</span></li>
-                        <li>Payment Plan <span style="color: #f8f9fc;">12–18 months plan</span></li>
+                        <li>Payment Plan <span style="color: #f8f9fc;">3-6 months</span></li>
                       </ul>
                       <div class="info-buttons">
-                        <a href="#" class="btn-info gold"><i class="fa fa-download"></i> Download Layout</a>
-                        <a href="#" class="btn-info navy"><i class="fa fa-search"></i> Check Availability</a>
-                        <a href="#" class="btn-info gold"><i class="fa fa-lock"></i> Secure Your Spot</a>
+                        <a href="https://wa.me/2349160008309?text=Hi%20Top-Tier%20team,%20I%20want%20to%20schedule%20a%20visit%20to%20HighlandCity%20Estate" 
+                        class="btn-info gold" 
+                        target="_blank">
+                        <i class="fa fa-lock"></i> Book a Visit
+                        </a>
                       </div>
                     </div>
                   </div>
 
                   <div class="col-lg-6">
-                    <img src="assets/images/hutupolo.jpg" alt="Penthouse" class="img-fluid rounded shadow-sm">
+                    <img src="assets/images/hutu500sqm.jpg" alt="Penthouse" class="img-fluid rounded shadow-sm">
                   </div>
 
                   <div class="col-lg-3">
-                    <h4 style="color: #001f3f;">Extra Info About Penthouse</h4>
-                    <p style="color: #000;">Enjoy breathtaking views and unmatched comfort in our penthouses, crafted with sophistication and attention to detail for those who appreciate exclusivity.</p>
+                    <h4 style="color: #001f3f;">Plot 1659, before Centenary City, Cadastral Zone E09, Lugbe South district, Abuja, F.C.T.</h4>
+                    <p style="color: #000;">Strategically located along Airport Road, just before Centenary City, Hutu Abuja is an FCDA-approved development sprawling over 200 hectares. Designed to set new standards, this estate will feature world-class amenities and infrastructure. Hutu Abuja is more than an estate-it's a lifestyle destination that blends leisure, elegance, and unmatched investment opportunities.
+                       This estate offers five distinct land options, tailored to meet diverse lifestyle needs</p>
                     <div class="icon-button">
                       <a href="property-details.html" class="visit-btn"><i class="fa fa-car"></i> Schedule a Visit</a>
                     </div>
