--- a/about.html
+++ b/about.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-509SPFF5E1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-509SPFF5E1');
+</script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -146,16 +155,13 @@
       <!-- About Text -->
       <div class="row align-items-center">
         <div class="col-lg-12">
-          <h4 style="color: #001f3f; font-weight: 700; margin-bottom: 15px;">Our Story</h4>
+          <h4 style="color: #001f3f; font-weight: 700; margin-bottom: 15px;">About Us</h4>
           <p style="color: #333; line-height: 1.8;">
-            At <strong>Top-tier Realty</strong>, we are driven by a passion to redefine the real estate experience in Nigeria. 
-            Our commitment to quality, transparency, and client satisfaction sets us apart. Whether you're buying, selling, 
-            or investing, we provide expert guidance and reliable services that turn your real estate goals into reality.
-          </p>
-          <p style="color: #333; line-height: 1.8;">
-            With a diverse portfolio of luxury and affordable properties, our mission is to create sustainable value and lasting 
-            relationships. Every property we offer is carefully curated to ensure comfort, functionality, and style — 
-            because at Top-tier Realty, your dream home is our priority.
+          Top-Tier Realty is a trusted real estate company committed to delivering a superior property experience through personalized service, smart solutions, and attention to detail.
+
+We help individuals and organizations achieve smooth, rewarding, and stress-free property ownership and investment.
+
+Driven by integrity, innovation, and excellence, we provide upscale value and services that make every real estate experience truly Top-Tier.
           </p>
         </div>
       </div>
@@ -163,7 +169,7 @@
       <!-- Small Flex Images -->
       <div class="row" style="margin-top: 40px; display: flex; justify-content: center; gap: 20px;">
         <div class="col-lg-5 col-md-6 col-sm-12">
-          <img src="assets/images/ourstorypics.jpg" alt="Team Work" style="width: 40%; border-radius: 10px;">
+          <img src="assets/images/ourstorypics1.jpg" alt="Team Work" style="width: 40%; border-radius: 10px;">
         </div>
         <div class="col-lg-5 col-md-6 col-sm-12">
           <img src="assets/images/high1.jpg" alt="Luxury Homes" style="width: 100%; border-radius: 10px;">
